# microscope-boilerplate

./: .gitignore  Microscope.Boilerplate.sln  install-cli.sh  install-template.sh  readme.md  roadmap.md  templatespack.csproj
.template.config/: template.json
docs/: 404.html  getting-started.html  hashmap.json  index.html  roadmap.html
docs/assets/: app.B2ucw6-p.js  app.BepQHp62.js  app.BmAymzGA.js  app.C-mTgGyC.js  app.C2mEZ0UU.js  app.CPvR2Yno.js  app.CkpG_RBt.js  app.ComrFovT.js  app.DEEIWvxC.js  app.DulnO7Xr.js  app.DvihITur.js  app.NRWQsGRv.js  app.iZQoZfhc.js  app.tD9SDwOO.js  getting-started.md.CHlC_yxY.lean.js  getting-started.md.CNOFALLi.js  getting-started.md.CprQ2pZL.js  getting-started.md.CprQ2pZL.lean.js  getting-started.md.DHImwdKs.js  getting-started.md.DHImwdKs.lean.js  getting-started.md.DJH6cTPU.js  getting-started.md.DJH6cTPU.lean.js  getting-started.md.DRxcafZg.js  getting-started.md.DRxcafZg.lean.js  index.md.CaCvCWz5.lean.js  index.md.Cj7o2B51.js  index.md.DYDijD_Q.js  index.md.DsmN7U6Z.js  roadmap.md.B0mU-Bq9.js  roadmap.md.B0mU-Bq9.lean.js  roadmap.md.BRVbPpq9.js  roadmap.md.BXYnRPPK.js  roadmap.md.BXYnRPPK.lean.js  roadmap.md.Bs7tiiG3.js  (+92 more)
src/templates/rust/api/: Cargo.toml
src/templates/rust/api/.template.config/: template.json
src/templates/rust/api/src/: main.rs
src/templates/rust/api/src/configurations/: mod.rs  open_api_configuration.rs
src/templates/rust/api/src/controllers/: mod.rs  weather_controller.rs
templates/: templatespack.csproj
tool/: .gitignore  Microscope.Boilerplate.Tool.CLI.sln  Program.cs  readme.md
(+1873 files in other folders)
