[package]
name = "microscope"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4"
rand = "0.8.5"
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.198", features = ["derive"] }
utoipa = { version = "4.2.0", features = ["chrono", "uuid", "actix_extras"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["actix-web"] }
